--- a/about.qmd
+++ b/about.qmd
@@ -1,10 +1,13 @@
 ---
 title: "About"
+image: Agbagba.jpg
+about:
+  template: jolla
 ---
 
 I am a Molecular Microbiology and Immunology PhD Candidate at the University of Maryland, School of Medicine in Baltimore, Maryland. My thesis advisers are Drs. [Cristiana Cairo](https://www.medschool.umaryland.edu/profiles/Cairo-Cristiana/) and [Kirsten Lyke.](https://www.medschool.umaryland.edu/profiles/Lyke-Kirsten/)
 
-For my thesis, I am interested in understanding the impact that prenatal exposure to maternal HIV and/or antiretrovirals have on the innate-like and adaptive T cells in HIV-exposed Uninfected (HEU) infants, and what are the consequences of these exposures during early life. \
+For my thesis, I am interested in understanding the impact that prenatal exposure to maternal HIV and/or antiretrovirals have on the innate-like and adaptive T cells in HIV-exposed Uninfected (HEU) infants, and what are the consequences of these exposures during early life.\
 
 I received my A.S in Natural Resources Biology from [Northwest College](https://nwc.edu/), where thanks to the opportunities for undergraduate research supported by Wyoming [INBRE](http://www.uwyo.edu/wyominginbre/) I first became interested in Microbiology. I then transferred to the [University of Wyoming](http://www.uwyo.edu/) where I completed my B.S. in Molecular Biology and Microbiology in 2016. It was here I became interested in Immunology, as I researched NK cell responses in mice to *Toxoplasma gondii* infection in the lab of [Jason Gigley](http://www.uwyo.edu/molecbio/faculty-and-staff/jason-gigley/index.html)
 
