Final Save For Tonight

--- a/index.qmd
+++ b/index.qmd
@@ -9,7 +9,7 @@ page-layout: custom
 
 ::: g-col-3
 ::: column-margin
-![](images/RecentPicture.png){width="250"}
+![](images/RecentPicture.png){width="230"}
 :::
 :::
 
@@ -17,7 +17,14 @@ page-layout: custom
 ::: column-body-outset-left
 ### 
 
-I am a Molecular Microbiology and Immunology PhD Candidate at the University of Maryland, School of Medicine in Baltimore, Maryland. My thesis advisers are Drs. [Cristiana Cairo](https://www.medschool.umaryland.edu/profiles/Cairo-Cristiana/) and [Kirsten Lyke.](https://www.medschool.umaryland.edu/profiles/Lyke-Kirsten/) My thesis is focused on understanding the impact that prenatal exposure to maternal HIV and/or antiretrovirals have on the innate-like and adaptive T cells in HIV-exposed Uninfected (HEU) infants, and what are the consequences of these exposures during early life.
+I am a Molecular Microbiology and Immunology PhD Candidate at the University of Maryland, School of Medicine in Baltimore, Maryland in the labs of Drs. [Cristiana Cairo](https://www.medschool.umaryland.edu/profiles/Cairo-Cristiana/) and [Kirsten Lyke.](https://www.medschool.umaryland.edu/profiles/Lyke-Kirsten/) 
+
+My thesis research focuses on understanding the impact pathogen exposure before birth has on neonatal and infant immune systems, with a special interest in innate-like and adaptive T cells in HIV-exposed Uninfected (HEU) infants.
+
+Using supervised and unsupervised analysis of spectral flow cytometry data, I am actively  learning systems immunology and statistical modeling approaches to better understand the heterogeneity in human immune responses to pathogens of global health relevance.  
+
+Outside lab, I enjoy trail running, birding, kayaking, coffee, learning languages, and have been known to occasionally have plants survive my summer gardening attempts. 
+
 :::
 :::
 
