--- a/posts.qmd
+++ b/posts.qmd
@@ -1,8 +1,11 @@
 ---
-title: "Over-Caffenaited Ramblings"
+title: ""
+page-layout: article
 listing:
   contents: posts
   type: grid
   sort: "date desc"
   categories: true
 ---
+
+#### Over-caffenaited Rabbit-Trails
