--- a/index.qmd
+++ b/index.qmd
@@ -1,33 +1,11 @@
 ---
 title: ""
-page-layout: custom
+image: images/RecentPicture.png
+about: trestles
 ---
 
-::: grid
-::: g-col-1
-:::
+I am a Molecular Microbiology and Immunology PhD Candidate at the University of Maryland, School of Medicine in Baltimore, Maryland in the labs of Drs. [Cristiana Cairo](https://www.medschool.umaryland.edu/profiles/Cairo-Cristiana/) and [Kirsten Lyke.](https://www.medschool.umaryland.edu/profiles/Lyke-Kirsten/)
 
-::: g-col-3
-::: column-margin
-![](images/RecentPicture.png){width="230"}
-:::
-:::
+My thesis research focuses on understanding the impact that pathogen exposure before birth has on neonatal and infant immune systems. I am specifically interested in innate-like and adaptive T cells in HIV-exposed Uninfected (HEU) infants, which I am characterizing by Spectral Flow Cytometry using both supervised and unsupervised analysis. I am also actively learning new systems immunology and statistical modeling techniques to better understand both my data and the heterogeneity in human immune responses to pathogens of global health relevance.
 
-::: g-col-7
-::: column-body-outset-left
-### 
-
-I am a Molecular Microbiology and Immunology PhD Candidate at the University of Maryland, School of Medicine in Baltimore, Maryland in the labs of Drs. [Cristiana Cairo](https://www.medschool.umaryland.edu/profiles/Cairo-Cristiana/) and [Kirsten Lyke.](https://www.medschool.umaryland.edu/profiles/Lyke-Kirsten/) 
-
-My thesis research focuses on understanding the impact pathogen exposure before birth has on neonatal and infant immune systems, with a special interest in innate-like and adaptive T cells in HIV-exposed Uninfected (HEU) infants.
-
-Using supervised and unsupervised analysis of spectral flow cytometry data, I am actively  learning systems immunology and statistical modeling approaches to better understand the heterogeneity in human immune responses to pathogens of global health relevance.  
-
-Outside lab, I enjoy trail running, birding, kayaking, coffee, learning languages, and have been known to occasionally have plants survive my summer gardening attempts. 
-
-:::
-:::
-
-::: g-col-1
-:::
-:::
+Outside lab, I enjoy trail running, birding, kayaking, coffee, learning languages, and have been known to occasionally have plants survive my summer gardening attempts.
