--- a/about.qmd
+++ b/about.qmd
@@ -3,73 +3,61 @@ title: ""
 format: 
   html: 
     code-fold: true
-toc: true
+toc: false
 toc-location: right
 engine: knitr
 page-layout: full
 ---
-:::: columns
-#### Volta Region, Ghana
-::: {.column width="5%"}
-:::
+```{css, echo = FALSE}
+.justify{
+  text-align: center
+}
+```
 
-::: {.column width="13%"}
-![](images/Agbagba.jpg)
+::: {.justify}
+### Hi, I am David. This is my story.        
+::: 
+
+<p></p>
+
+:::: columns
+
+::: {.column width="49%"}
+![](images/Wyo.jpg){width=100%}
 :::
 
 ::: {.column width="2%"}
 :::
 
-::: {.column width="75%"}
-Before moving to Baltimore for graduate school, I served in the US Peace Corps as a Secondary Science Education Volunteer, in Ghana (West Africa) from 2016-2018, teaching biology and chemistry at a rural high school in the Volta region in the SE corner of the country.
+::: {.column width="49%"}
+I am a graduate of [Northwest College](https://nwc.edu/), receiving my A.S in Natural Resources Biology. It was here thanks to undergraduate research opportunities through [INBRE](http://www.uwyo.edu/wyominginbre/) that I first became interested in Microbiology. After Northwest, I transferred to the [University of Wyoming](http://www.uwyo.edu/) where I received a B.S. in Molecular Biology and Microbiology, where I became interested in Immunology while researching NK cell responses to secondary *Toxoplasma gondii* infection in the lab of [Jason Gigley](http://www.uwyo.edu/molecbio/faculty-and-staff/jason-gigley/index.html).
 :::
 
-::: {.column width="5%"}
+::::
+
+<br></br>
+
+
+:::: columns
+
+::: {.column width="45%"}
+<br></br>
+Before moving to Baltimore for graduate school, I served in the [Peace Corps](https://www.peacecorps.gov/) as a Secondary Science Teacher in [Ghana](https://en.wikipedia.org/wiki/Ghana) from 2016-2018. I taught biology and chemistry at a rural high school in the Volta Region.
+:::
+
+::: {.column width="10%"}
+:::
+
+::: {.column width="45%"}
+![](images/Agbagba.jpg)
 :::
 
 ::::
 
 
-
 :::: columns
-#### Wyoming
-::: {.column width="5%"}
-:::
+:::{.column width=}
 
-::: {.column width="43%"}
-![](images/Wyo.jpg)
-:::
-
-::: {.column width="2%"}
-:::
-
-::: {.column width="45%"}
-I received my A.S in Natural Resources Biology from [Northwest College](https://nwc.edu/), where thanks to the opportunities for undergraduate research supported by Wyoming [INBRE](http://www.uwyo.edu/wyominginbre/) I first became interested in Microbiology. I then transferred to the [University of Wyoming](http://www.uwyo.edu/) where I completed my B.S. in Molecular Biology and Microbiology in 2016. It was here I became interested in Immunology, as I researched NK cell responses in mice to *Toxoplasma gondii* infection in the lab of [Jason Gigley](http://www.uwyo.edu/molecbio/faculty-and-staff/jason-gigley/index.html)
-:::
-
-::: {.column width="5%"}
-:::
-
-:::::
-
-
-:::: columns
-#### Chiapas, Mexico
-::: {.column width="5%"}
-:::
-
-::: {.column width="43%"}
 ![](images/Palenque.jpg)
-:::
-
-::: {.column width="2%"}
-:::
-
-::: {.column width="45%"}
 "Where are you from?" is a question I am frequently asked, but defies a simple answer. When I was two, my family moved to Chiapas, Mexico to work. And that's where we remained.
-:::
 
-::: {.column width="5%"}
-:::
-
-:::::
