--- a/index.qmd
+++ b/index.qmd
@@ -20,7 +20,7 @@ I am a Molecular Microbiology and Immunology PhD Candidate at the University of 
 
 My [thesis research](research.qmd) focuses on understanding the impact that prenatal exposure to maternal HIV and/or antiretrovirals has on Innate-like and Adaptive T cells in HIV-exposed Uninfected (HEU) infants during early life.
 
-I am interested in the potential for spectral flow cytometry to better understand the heterogeneity present in human immune responses to pathogens of global health relevance. To do so, I am actively learning systems immunology and statistical modeling approaches, with the goal of improving on existing supervised and unsupervised analysis techniques.    
+I am interested in the potential of spectral flow cytometry to better understand the heterogeneity present in human immune responses to pathogens of global health relevance. To do so, I am actively learning systems immunology and statistical modeling approaches, with the goal of improving on existing supervised and unsupervised analysis techniques.    
 
 When I am not in lab, I enjoy birding, trail running, kayaking, coffee, learning new languages and have occasionally had a plant survive my summer gardening attempts. 
 :::
