--- a/posts.qmd
+++ b/posts.qmd
@@ -7,13 +7,28 @@ listing:
   type: grid
   sort: "date desc"
   categories: true
+engine: knitr
 ---
-::::columns
-:::{.column width=50%}
-![](images/RabbitTrails.jpg)
+
+```{css, echo = FALSE}
+.justify{
+  text-align: center
+}
+```
+
+
+:::: columns
+
+:::{.column width="5%"}
 :::
-:::{.column width=50%}
-![](images/Coffee.jpg){width=56.5%}
+
+:::{.column width="90%"}
+![](images/RabbitTrails.jpg){width=100%}
 :::
+
+:::{.column width="5%"}
+:::
+
 ::::
+
 #### 
