--- a/posts.qmd
+++ b/posts.qmd
@@ -16,19 +16,16 @@ engine: knitr
 }
 ```
 
-
-:::: columns
-
-:::{.column width="5%"}
+::: columns
+::: {.column width="5%"}
 :::
 
-:::{.column width="90%"}
-![](images/RabbitTrails.jpg){width=100%}
+::: {.column width="90%"}
+![](images/RabbitTrails.jpg){width="100%"}
 :::
 
-:::{.column width="5%"}
+::: {.column width="5%"}
 :::
-
-::::
+:::
 
 #### 
