--- a/about.qmd
+++ b/about.qmd
@@ -8,84 +8,78 @@ toc-location: right
 engine: knitr
 page-layout: full
 ---
+
 ```{css, echo = FALSE}
 .justify{
   text-align: center
 }
 ```
 
-::: {.justify}
-### Hi, I am David. Who am I?    
-::: 
+::: justify
+### Hi, I am David. Who am I?
+:::
 
-<p></p>
+<p>
 
-:::: columns
+</p>
 
+::: columns
 ::: {.column width="4%"}
 :::
 
 ::: {.column width="35%"}
-![](images/Palenque.jpg){width=95%}
+![](images/Palenque.jpg){width="95%"}
 :::
 
 ::: {.column width="2%"}
 :::
 
 ::: {.column width="55%"}
-"Where are you from?" is the introductory question that as a [Third Culture Kid](https://www.nytimes.com/2020/09/11/t-magazine/luca-guadagnino-third-culture-kids.html?unlocked_article_code=gmcO6aItnbYg-KmwHkfF8V49bsFJUEw_TG4zMswnK6wfzIPWwdVQCigYDCQotX6SwgskywRMfIjReydmC_AgY5CXrYdDTdu-zpL9pjXpmyCFXNRqSYUGQD89Q-TpWgVdKExEBfq6RL8FjfZv2pbS6OYWdJylnwMqCaltK3D1v2GB0OhmrQLaFWP79LeDntEnmcM02jGZBOKQp4QdrP2NVTYmdR1bMJxX8bKPZAgYg_NQcJTgTK6nqKJpgLmdliWD4gbtdOYDQ5hVYlGgSfG2OSdjkqaKJ9RwweS-h6zHMj8DdBHckjMG46hnz6JBGMgE-gmUh3dC9pYWhjCnKiK4QZ83jK70Zxd7KqFEvmsZgg&smid=url-share") I grew up dreading, since I never had the simple concise answer that most people expect when you first meet. 
+"Where are you from?" is the introductory question that as a [Third Culture Kid](https://www.nytimes.com/2020/09/11/t-magazine/luca-guadagnino-third-culture-kids.html?unlocked_article_code=gmcO6aItnbYg-KmwHkfF8V49bsFJUEw_TG4zMswnK6wfzIPWwdVQCigYDCQotX6SwgskywRMfIjReydmC_AgY5CXrYdDTdu-zpL9pjXpmyCFXNRqSYUGQD89Q-TpWgVdKExEBfq6RL8FjfZv2pbS6OYWdJylnwMqCaltK3D1v2GB0OhmrQLaFWP79LeDntEnmcM02jGZBOKQp4QdrP2NVTYmdR1bMJxX8bKPZAgYg_NQcJTgTK6nqKJpgLmdliWD4gbtdOYDQ5hVYlGgSfG2OSdjkqaKJ9RwweS-h6zHMj8DdBHckjMG46hnz6JBGMgE-gmUh3dC9pYWhjCnKiK4QZ83jK70Zxd7KqFEvmsZgg&smid=url-share%22) I grew up dreading, since I never had the simple concise answer that most people expect when you first meet.
 
-My family is originally from southwest Michigan, but moved to Chiapas, Mexico to work on water-sanitation projects when I was two. I learned to read and write in Spanish before doing so in English, birdwatched around Mayan ruins growing up, and took my SAT exam in Cancun after a 22 hour bus ride to get there as it was the closest testing site. 
+My family is originally from southwest Michigan, but moved to Chiapas, Mexico to work on when I was two. I learned to read and write in Spanish long before doing so in English, birdwatched around Mayan ruins growing up, and the only time I have been to Cancun was after a 22 hour bus ride to get there to take my SAT exam needed as part of the US university admissions process (it was the closest testing site). 
 :::
 
 ::: {.column width="4%"}
 :::
-
-::::
+:::
 
 <br></br>
 
-:::: columns
-
+::: columns
 ::: {.column width="4%"}
 :::
 
 ::: {.column width="55%"}
-I moved myself back to the US for college when I was 17. I graduated from [Northwest College](https://nwc.edu/), receiving my A.S in Natural Resources Biology. It was here thanks to undergraduate research opportunities through [INBRE](http://www.uwyo.edu/wyominginbre/) that I first became interested in Microbiology. After Northwest, I transferred to the [University of Wyoming](http://www.uwyo.edu/) where I received a B.S. in Molecular Biology and Microbiology, where I became interested in Immunology while researching NK cell responses to secondary *Toxoplasma gondii* infection in the lab of [Jason Gigley](http://www.uwyo.edu/molecbio/faculty-and-staff/jason-gigley/index.html).
+I moved myself back to the US for college when I was 17. I graduated from [Northwest College](https://nwc.edu/), receiving my A.S in Natural Resources Biology. It was here thanks to undergraduate research opportunities through [INBRE](http://www.uwyo.edu/wyominginbre/) that I first became interested in Microbiology. After Northwest, I transferred to the [University of Wyoming](http://www.uwyo.edu/) where I received a B.S. in Molecular Biology and Microbiology, and got my first taste of immunology researching NK cell responses to secondary *Toxoplasma gondii* infection in the lab of [Jason Gigley](http://www.uwyo.edu/molecbio/faculty-and-staff/jason-gigley/index.html).
 :::
 
 ::: {.column width="2%"}
 :::
 
 ::: {.column width="35%"}
-![](images/Wyo.jpg){width=95%}
+![](images/Wyo.jpg){width="95%"}
 :::
 
 ::: {.column width="4%"}
 :::
+:::
 
-::::
-
-
-
-:::: columns
+::: columns
 ::: {.column width="4%"}
 :::
 
 ::: {.column width="35%"}
-![](images/Agbagba.jpg){width=95%}
+![](images/Agbagba.jpg){width="95%"}
 :::
 
 ::: {.column width="2%"}
 :::
 
 ::: {.column width="55%"}
-<br></br>
-After college, I served in the [Peace Corps](https://www.peacecorps.gov/) as a Secondary Science Teacher in [Ghana](https://en.wikipedia.org/wiki/Ghana) from 2016-2018. I taught biology and chemistry at a rural high school in the Volta Region.
+<br></br> After college, I served in the [Peace Corps](https://www.peacecorps.gov/) as a Secondary Science Teacher in [Ghana](https://en.wikipedia.org/wiki/Ghana) from 2016-2018. I taught biology and chemistry at a rural high school in the Volta Region. It was during my time in Ghana working on secondary projects focused on Malaria that I decided to enter a Microbiology and Immunology PhD program. 
 :::
 
 ::: {.column width="4%"}
 :::
-
-::::
-
+:::
