--- a/index.qmd
+++ b/index.qmd
@@ -18,7 +18,7 @@ page-layout: full
 ::: {.column width="55%"}
 I am a Molecular Microbiology and Immunology PhD Candidate at the University of Maryland, Baltimore. My thesis advisers are Drs. [Cristiana Cairo](https://www.medschool.umaryland.edu/profiles/Cairo-Cristiana/) and [Kirsten Lyke.](https://www.medschool.umaryland.edu/profiles/Lyke-Kirsten/)
 
-My [thesis research](research.qmd) focuses on understanding the impact prenatal exposure to maternal HIV and/or antiretrovirals have on HIV-exposed Uninfected (HEU) infant's Innate-like and Adaptive T cells during early life. Working with a Malawian clinical cohort, I process and analyze cryopreserved cord blood mononuclear cells (CBMCs) and peripheral blood mononuclear cells (PBMCs) for Spectral Flow Cytometry. 
+My [thesis research](research.qmd) focuses on understanding the impact prenatal exposure to maternal HIV and/or antiretrovirals have on HIV-exposed Uninfected (HEU) infant's Innate-like and Adaptive T cells during early life. Working with a Malawian clinical cohort, we are analyzing cryopreserved cord blood mononuclear cells (CBMCs) and peripheral blood mononuclear cells (PBMCs) for Spectral Flow Cytometry. 
 
 The heterogeneity underlying human immune responses to pathogens of global health relevance is something I find fascinating. Interpreting biological signal from experimental, technical and instrumental noise in these context is the kicker. To better understand these issues, I am currently learning statistical inference and system immunology approaches with eventual goal of improving on existing supervised and unsupervised analysis of cytometry data. Because it's tragic to collect 3 million cells to only ultimately use the median value. 
 
