--- a/about.qmd
+++ b/about.qmd
@@ -37,7 +37,7 @@ page-layout: full
 ::: {.column width="55%"}
 "Where are you from?" is the introductory question that as a [Third Culture Kid](https://www.nytimes.com/2020/09/11/t-magazine/luca-guadagnino-third-culture-kids.html?unlocked_article_code=gmcO6aItnbYg-KmwHkfF8V49bsFJUEw_TG4zMswnK6wfzIPWwdVQCigYDCQotX6SwgskywRMfIjReydmC_AgY5CXrYdDTdu-zpL9pjXpmyCFXNRqSYUGQD89Q-TpWgVdKExEBfq6RL8FjfZv2pbS6OYWdJylnwMqCaltK3D1v2GB0OhmrQLaFWP79LeDntEnmcM02jGZBOKQp4QdrP2NVTYmdR1bMJxX8bKPZAgYg_NQcJTgTK6nqKJpgLmdliWD4gbtdOYDQ5hVYlGgSfG2OSdjkqaKJ9RwweS-h6zHMj8DdBHckjMG46hnz6JBGMgE-gmUh3dC9pYWhjCnKiK4QZ83jK70Zxd7KqFEvmsZgg&smid=url-share%22) I grew up dreading, since I never had the simple concise answer that most people expect when you first meet.
 
-My family is originally from southwest Michigan, but moved to Chiapas, Mexico to work on when I was two. I learned to read and write in Spanish long before doing so in English, birdwatched around Mayan ruins growing up, and the only time I have been to Cancun was after a 22 hour bus ride to get there to take my SAT exam needed as part of the US university admissions process (it was the closest testing site). 
+My family is originally from southwest Michigan, but moved to Chiapas, Mexico to work on when I was two. I learned to read and write in Spanish long before doing so in English, birdwatched around Mayan ruins growing up, and the only time I have been to Cancun was after a 22 hour bus ride to get there to take my SAT exam needed as part of the US university admissions process (it was the closest testing site).
 :::
 
 ::: {.column width="4%"}
@@ -77,7 +77,26 @@ I moved myself back to the US for college when I was 17. I graduated from [North
 :::
 
 ::: {.column width="55%"}
-<br></br> After college, I served in the [Peace Corps](https://www.peacecorps.gov/) as a Secondary Science Teacher in [Ghana](https://en.wikipedia.org/wiki/Ghana) from 2016-2018. I taught biology and chemistry at a rural high school in the Volta Region. It was during my time in Ghana working on secondary projects focused on Malaria that I decided to enter a Microbiology and Immunology PhD program. 
+<br></br> After college, I served in the [Peace Corps](https://www.peacecorps.gov/) as a Secondary Science Teacher in [Ghana](https://en.wikipedia.org/wiki/Ghana) from 2016-2018. I taught biology and chemistry at a rural high school in the Volta Region. It was during my time in Ghana working on secondary projects focused on Malaria that I decided to enter a Microbiology and Immunology PhD program.
+:::
+
+::: {.column width="4%"}
+:::
+:::
+
+::: columns
+::: {.column width="4%"}
+:::
+
+::: {.column width="55%"}
+<br></br> I moved to Baltimore for my PhD in 2018. After a year and a half of classes and passing my qualifying exam, I was excited to finally start full time in the lab. This was March 2020, and it was not to be. While stuck at home, I volunteered for the Pfizer Phase I clinical trial taking place at the [University of Maryland Center for Vaccine Development](https://www.medschool.umaryland.edu/cvd/trials/) and somehow ended up for the next nine months with friends and family telling me they saw my arm in their newspaper again. But [this](https://wjla.com/news/local/university-of-maryland-covid-trial-vaccine-recipient-success-indicators) was my favorite headline.
+:::
+
+::: {.column width="2%"}
+:::
+
+::: {.column width="35%"}
+![](images/Covid.jpeg){width="95%"}
 :::
 
 ::: {.column width="4%"}
