--- a/research.qmd
+++ b/research.qmd
@@ -23,7 +23,7 @@ csl: nature-immunology
 
 ::: {.column width="45%"}
 ::: {style="float: left"}
-An estimated 1.5 million HIV+ women give birth per year[@Hsu_2021]. Thanks to improved antiretrovirals (and critically, affordable access to them in the most affected countries), vertical transmission of HIV from mother to child is increasingly prevented. HIV-exposed Uninfected (HEU) infants are born uninfected, and a growing patient population. 
+An estimated 1.5 million HIV+ women give birth per year. Thanks to improved antiretrovirals (and critically, affordable access to them in the most affected countries), vertical transmission of HIV from mother to child is increasingly prevented. These HIV-exposed uninfected (HEU) infants are a growing patient population in many countries.
 :::
 :::
 
@@ -31,15 +31,25 @@ An estimated 1.5 million HIV+ women give birth per year[@Hsu_2021]. Thanks to im
 :::
 :::
 
-Despite being born uninfected, during their first six months of life, HEU infants have increased morbidity for respiratory and gastrointestinal infections compared to HIV-unexposed (HU) Infants living in the same communities. It's hypothesized that inflammation at the fetal-maternal interface driven by exposure to maternal virus (and viral proteins) may  perturb the developing infant immune system, resulting in the observed increased morbidity in early life. Confoundingly, antiretrovirals (ART) can also drive inflammation at the fetal-maternal interface, and are reported to alter mitochondrial function. 
+Despite being born uninfected, during their first six months of life, HEU infants have increased morbidity for respiratory and gastrointestinal infections compared to HIV-unexposed (HU) Infants living in the same communities. It's hypothesized that inflammation at the fetal-maternal interface driven by exposure to maternal virus (and viral proteins) may perturb the developing infant immune system, resulting in the observed increased morbidity in early life. Confoundingly, antiretrovirals (ART) can also drive inflammation at the fetal-maternal interface, and are reported to alter mitochondrial function.
 
 ![](images/MalawiHEUCohort.png){width="600"}
 
-To better understand the contribution of maternal viremia to infant immune perturbation, we are analyzing a clinical cohort of Malawian infants with well-characterized prenatal HIV-exposure. Specifically, we are comparing three groups of infants born to women with: A) ART-treated HIV infection and undetectable viral load since before conception and through pregnancy (HEU-lo); B) HIV infection diagnosed and treated at mid-gestation or later, with high viral load (>10,000 copies/mL) at enrollment (HEU-hi); and C) no HIV infection (HU).
+To better understand the contribution of maternal viremia to infant immune perturbation, we are analyzing a clinical cohort of Malawian infants with well-characterized prenatal HIV-exposure. Specifically, we are comparing three groups of infants born to women with: A) ART-treated HIV infection and undetectable viral load since before conception and through pregnancy (HEU-lo); B) HIV infection diagnosed and treated at mid-gestation or later, with high viral load (\>10,000 copies/mL) at enrollment (HEU-hi); and C) no HIV infection (HU).
 
-Cord Blood Mononuclear Cells are collected at birth, and cryopreserved. Additional peripheral blood samples are collected at 4 and 9 months after initial childhood vaccinations. Upon arrival in Baltimore, the cells are thawed and processed for Spectral Flow Cytometry. In cord blood, we are looking at Innate-like T cells and Myeloid Cells, and longitudinally at conventional T cells.
+At birth, Cord Blood Mononuclear Cells were collected, and cryopreserved in liquid nitrogen. After initial childhood vaccination, peripheral blood from the infants was also collected at 4 and 9 months being similarly processed and stored. Ultimately, the cells were shipped here to Baltimore for flow cytometry analysis.
 
-Innate-like T cells (ILTs), including Natural Killer T cells (NKTs), Mucosal-associated Invariant T cells (MAITs), and V𝛾9V𝛿2 (V𝛿2) T cells, are activated by both microbial metabolites as well as by innate cytokines. Once activated, they mount TH1-like cytokine and cytotoxic responses, playing important roles against pathogens in adults. The effect exerted by in utero HIV exposure on infant ILTs is unknown.  
+![](images/Timeline.png){width="400"}
+
+For my thesis project, I am interested in how the maternal viral and antiretroviral exposure affects HEU-infant's 1) Innate-like T cells, and 2) conventional alpha beta T cells at baseline and upon activation.
+
+Innate-like T cells (ILTs), including Natural Killer T cells (NKTs), Mucosal-associated Invariant T cells (MAITs), and V𝛾9V𝛿2 (V𝛿2) T cells, are activated by both microbial metabolites as well as by innate cytokines. Once activated, they mount TH1-like cytokine and cytotoxic responses, playing important roles against pathogens in adults. The effect exerted by in utero HIV exposure on infant ILTs is unknown.
+
+Upon arrival in Baltimore, the cells are thawed and processed for Spectral Flow Cytometry.
+
+![](images/Processing.png){width="600"}
+
+[@Hsu_2021]
 
 ::: {#refs}
 :::
